--- a/Case_Study_1.ipynb
+++ b/Case_Study_1.ipynb
@@ -81,6 +81,7 @@
    "outputs": [],
    "source": [
     "#Load Dataset File\n",
+    "#Reolace the dataset file path with your own dataset path\n",
     "dataset = pd.read_csv(\"data.csv\")"
    ]
   },
