--- a/Case_Study_1.ipynb
+++ b/Case_Study_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5d3d6957-2089-42be-b9b7-78c01bdc1e6a",
    "metadata": {},
    "outputs": [],
@@ -24,20 +24,6 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "3e1f0656-5f2b-4619-975c-9af29b86d4b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To show all rows\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "\n",
-    "# To show all columns\n",
-    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
@@ -162,6 +148,182 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "1bfffe51-25fe-4f1a-b274-5431f2c26a1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7339"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b44c140a-c011-4c80-8ba1-1ab6ca4ec9c6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Watch or listen live weekdays at 8:30am MT at ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chubby And Hot, Always Stir The Pot!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Albertan. Mom to children &amp; dogs. Wife. Friend...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Albertan. Mom to children &amp; dogs. Wife. Friend...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Albertan. Mom to children &amp; dogs. Wife. Friend...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Former progressive conservative specializing i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>I'm Kuno, a Gov't qualified service dog in Alb...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Albertan. Mom to children &amp; dogs. Wife. Friend...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Albertan. Mom to children &amp; dogs. Wife. Friend...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Albertan. Mom to children &amp; dogs. Wife. Friend...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Data\n",
+       "1   Watch or listen live weekdays at 8:30am MT at ...\n",
+       "3                Chubby And Hot, Always Stir The Pot!\n",
+       "7   Albertan. Mom to children & dogs. Wife. Friend...\n",
+       "8   Albertan. Mom to children & dogs. Wife. Friend...\n",
+       "9   Albertan. Mom to children & dogs. Wife. Friend...\n",
+       "11  Former progressive conservative specializing i...\n",
+       "13  I'm Kuno, a Gov't qualified service dog in Alb...\n",
+       "14  Albertan. Mom to children & dogs. Wife. Friend...\n",
+       "15  Albertan. Mom to children & dogs. Wife. Friend...\n",
+       "16  Albertan. Mom to children & dogs. Wife. Friend..."
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking for duplicate rows\n",
+    "dataset[dataset.duplicated()].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a9ca4728-ea5a-49c0-a1bd-d2f590795d41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5353"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total number of duplicated rows\n",
+    "dataset.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "680a0eff-5983-4ccb-8e3d-93fc1089b3ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dropping duplicate rows to reduce computation\n",
+    "dataset = dataset.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d21dfa5c-e72c-4486-b38e-d439321796ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1986"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "1c21536a-7cc6-4571-b076-27391006507b",
    "metadata": {
     "scrolled": true
@@ -175,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "3492d1d3-86f0-4729-a522-5c697d9c14a0",
    "metadata": {
     "scrolled": true
@@ -188,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "fa63b7a5-85a4-4413-8d6d-2afdb08fd01e",
    "metadata": {},
    "outputs": [],
@@ -199,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "e911a9d6-4429-40eb-9ac8-168c198f5e8f",
    "metadata": {},
    "outputs": [],
@@ -209,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "7284dc3a-7108-40cf-820e-69458594f73b",
    "metadata": {
     "scrolled": true
@@ -221,17 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "a1794a6e-d45f-4404-b53c-25fce1ff60a0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "122774"
+       "32126"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "222d1f7b-6af8-48a2-9a38-0bd117f08b28",
    "metadata": {},
    "outputs": [],
@@ -260,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "04407a5e-a25d-45d2-aa65-c6105ac59c23",
    "metadata": {},
    "outputs": [],
@@ -270,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "51eb2768-7013-4e89-b467-3c392bda076c",
    "metadata": {
     "scrolled": true
@@ -282,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "84b20512-f73c-43bb-8884-b30d9d6399e9",
    "metadata": {},
    "outputs": [
@@ -292,7 +454,7 @@
        "7893"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "a728f407-052f-44ea-995f-27ce32d8c018",
    "metadata": {
     "scrolled": true
@@ -339,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "a9483de8-bd73-4005-87dd-d8ae80a0d52b",
    "metadata": {},
    "outputs": [
@@ -349,7 +511,7 @@
        "6528"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "3ccbccc9-dfc7-479b-b7c6-43e4677ee5e2",
    "metadata": {
     "scrolled": true
@@ -372,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "c36faca6-2334-4bae-9cf4-2d190f4c1b60",
    "metadata": {},
    "outputs": [
@@ -419,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "4bcf46b5-d141-4321-9cfa-f23eca03c028",
    "metadata": {},
    "outputs": [],
@@ -437,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "7c026c98-52a6-4c8b-97d4-6c54c7a9672c",
    "metadata": {
     "scrolled": true
@@ -449,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "3913842b-4748-4ac5-8a29-b3b2d2821d7c",
    "metadata": {},
    "outputs": [
@@ -459,7 +621,7 @@
        "7334"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "8307b330-8a6a-4906-b7a1-98a3dba949f5",
    "metadata": {},
    "outputs": [
