--- a/Case_Study_1/Q 1&3.ipynb
+++ b/Case_Study_1/Q 1&3.ipynb
@@ -193,6 +193,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c4e4072",
+   "metadata": {},
+   "source": [
+    "### prompt Used : \"Inlcude all the dates patterns to identify in my datset\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "691d7f79-d74a-4987-82d5-38a71558b509",
@@ -250,6 +258,14 @@
    "metadata": {},
    "source": [
     "### Its including rows consisting of other numeric values like '9-1-1', '24/7' and phone numbers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75070066",
+   "metadata": {},
+   "source": [
+    "### Prompt used to solve this:\"it is including 24/7,9-1-1, other numericals  etc as well. ignore them\""
    ]
   },
   {
@@ -7674,54 +7690,6 @@
     "print(f\"🔍 Number of records with a not word starting with an alphabet and  a URL: {len(result)}\")\n",
     "print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "958388e4-64ef-44f8-a5f4-49116ef0d323",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "473d7e17-e1d5-4203-b55b-b3bac94b8bbc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fffd99e-2788-40b4-a00a-74f8f4693b43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "670ab929-a3a5-4f91-899a-50eeb277ef83",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e75bfca-8971-47e7-a6ca-c9c9044782b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "286e7ae3-d9d9-451a-b60d-eaf1ef2375b1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
