added Tuned cnnmodel.ipynb file

--- a/Computer_Vision_/CV_Assignment1/CNN_Tuned.ipynb
+++ b/Computer_Vision_/CV_Assignment1/CNN_Tuned.ipynb
@@ -841,6 +841,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b4d282b",
+   "metadata": {},
+   "source": [
+    "### ✅ Recommendation\n",
+    "- Further improvement may require:\n",
+    "  - **Class balancing techniques** (oversampling/undersampling, SMOTE)\n",
+    "  - **Focal Loss** or **class-weighted loss functions**\n",
+    "  - **Data augmentation** for underrepresented classes\n",
+    "  - **Model ensembling** or architecture tuning\n",
+    "  - **Error analysis** on 'menu' class to ensure proper data quality and representation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "38929d2a-006d-48f3-b742-4ef5bc419274",
    "metadata": {},
    "source": [
@@ -1297,6 +1311,63 @@
     "- **'Menu' class still underperforms**, but is finally detected with non-zero recall and a much-improved AUC.\n",
     "- **Class imbalance persists**, though the model is becoming more robust and confident across classes."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "393c7039",
+   "metadata": {},
+   "source": [
+    "### ✅ Recommendation\n",
+    "- Maintain this current training setup and fine-tune further for minority classes:\n",
+    "  - Use targeted **data augmentation** for 'menu', 'outside', 'drink'\n",
+    "  - Experiment with **cost-sensitive loss** or **oversampling** the minority classes\n",
+    "  - Consider ensembling or **multi-head architectures** to balance precision/recall trade-offs\n",
+    "  - Use **calibration tools** like Platt scaling or isotonic regression for further log loss improvements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76668908",
+   "metadata": {},
+   "source": [
+    "## Prompts:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa2cf6cc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ff0d27e",
+   "metadata": {},
+   "source": [
+    "1. I want to document 3 rounds of hyperparameter tuning for my KNN classifier. Include metrics like accuracy, confusion matrix, and analysis of how changing k affected performance and class separation. Suggest optimal values and justify them"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0e29fb3",
+   "metadata": {},
+   "source": [
+    "2. Generate training vs validation loss and accuracy curves for each tuning iteration of my CNN model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16355292",
+   "metadata": {},
+   "source": [
+    "3. After each tuning iteration of my CNN, show a confusion matrix on the test set. Analyze improvements in class separability, especially for frequently confused classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cad4313e",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
