Q4_preprocessing_model_building

--- a/NLP_CaseStudy2/Gokul_NLP_Non_casual_Transformer.ipynb
+++ b/NLP_CaseStudy2/Gokul_NLP_Non_casual_Transformer.ipynb
@@ -13,7 +13,7 @@
         "1.   Own solution for  Preprocessing\n",
         "2.   Data cleaning, reading with correct format\n",
         "3.   Visualising\n",
-        "4.   BiLstm modelling, evaluation, Fine-Tuning of two rounds\n",
+        "4.   Non-Casual Transformers modelling and plotting evaluation metrics for first training\n",
         "\n",
         "\n"
       ]
@@ -4282,17 +4282,6 @@
         "from tensorflow.keras import layers\n",
         "import numpy as np\n",
         "import time\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WvclDpc1B6df"
-      },
-      "outputs": [],
-      "source": [
-        "sacfasdfdcb"
       ]
     },
     {
